tests/enum_into/compile_fail/field/mapping_struct_to_tuple_fields.stderr
error: Unexpected mapping to positional field for struct variant
 --> tests/enum_into/compile_fail/field/mapping_struct_to_tuple_fields.rs:8:35
  |
8 |         #[enum_into(Target::Tuple.0)]
  |                                   ^
